[gd_scene load_steps=11 format=3 uid="uid://b8wi1fk826okx"]

[ext_resource type="FontFile" uid="uid://nr2pewfnnipp" path="res://assets/fonts/Xolonium-Regular.ttf" id="1_ahhtf"]
[ext_resource type="Script" uid="uid://7sibq2vttuu7" path="res://scripts/hud.gd" id="1_oo0fn"]
[ext_resource type="Texture2D" uid="uid://dymba0fw48ref" path="res://assets/icons/help-box-white.svg" id="3_5ysmq"]
[ext_resource type="PackedScene" uid="uid://bik1gnm5jklu2" path="res://scenes/help.tscn" id="4_6fi6k"]

[sub_resource type="InputEventAction" id="InputEventAction_oo0fn"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_5ysmq"]
events = [SubResource("InputEventAction_oo0fn")]

[sub_resource type="InputEventAction" id="InputEventAction_5ysmq"]
action = &"quit_game"

[sub_resource type="Shortcut" id="Shortcut_6fi6k"]
events = [SubResource("InputEventAction_5ysmq")]

[sub_resource type="InputEventAction" id="InputEventAction_6fi6k"]
action = &"help"

[sub_resource type="Shortcut" id="Shortcut_uo2fv"]
events = [SubResource("InputEventAction_6fi6k")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_oo0fn")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_top = 30.0
offset_bottom = 108.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -180.0
offset_right = 240.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 64
text = "Dodge the Creeps!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -189.5
offset_top = -200.0
offset_right = 190.5
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 0
tooltip_auto_translate_mode = 2
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 48
shortcut = SubResource("Shortcut_5ysmq")
shortcut_in_tooltip = false
text = "Start"

[node name="QuitButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -190.0
offset_top = -100.0
offset_right = 190.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
tooltip_auto_translate_mode = 2
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 48
shortcut = SubResource("Shortcut_6fi6k")
shortcut_in_tooltip = false
text = "Quit"

[node name="HelpButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -74.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 74.0
grow_horizontal = 0
tooltip_auto_translate_mode = 2
shortcut = SubResource("Shortcut_uo2fv")
shortcut_in_tooltip = false
icon = ExtResource("3_5ysmq")
icon_alignment = 1
expand_icon = true

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Help" parent="." instance=ExtResource("4_6fi6k")]
visible = false

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="HelpButton" to="." method="_on_help_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
